styles.css
@import url("https://fonts.googleapis.com/css2?family=Merriweather&family=Metamorphous&family=Montserrat&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #f9fbe7;
  color: black;
}

main {
  display: grid;
  grid-template-columns: 2fr 3fr;
  padding: 0;
  margin: 0;
  min-height: 0;
}

.panel.welcome footer {
  margin-top: 150px;
  height: 30px;
  text-align: center;
}

.panel.welcome footer img {
  max-width: 30px;
  max-height: 30px;
}

.mainportfolio {
  display: grid;
  grid-template-columns: 1fr;
}

.panel {
  display: grid;
  grid-template-columns: 1fr;
}

/*photos panel*/
.panel.photos {
  display: grid;
  overflow: hidden;
  min-width: 100%;
  min-height: 100vh;
}

/*welcome panel*/
.panel.welcome {
  background: #f9fbe7;
  padding: 0px;
  grid-auto-rows: 0.5fr 0.3fr 3fr 0.8fr;
}

.panel.welcome nav a {
  font-family: "Montserrat", sans-serif;
  color: black;
  text-decoration: none;
  margin-right: 0px;
  margin-left: 20px;
  margin-bottom: 5px;
}

.panel.welcome p {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  color: black;
  text-decoration: none;
  text-align: center;
}

.panel.welcome h1 {
  font-family: "Metamorphous", cursive;
  color: black;
  text-decoration: none;
  font-size: 80px;
  text-align: center;
  margin-top: 0px;
}

/*portfolio panel*/
.panel.portfolio {
  background: #f9fbe7;
  padding: 0px 10px;
  grid-auto-rows: 1fr;
}

.panel.portfolio nav a {
  font-family: "Montserrat", sans-serif;
  color: black;
  text-decoration: none;
  margin-right: 0px;
  margin-left: 20px;
  margin-bottom: 0px;
}

#portfolio_title {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  color: black;
  text-decoration: none;
  text-align: center;
  margin-bottom: 0px;
  margin-top: 40px;
  padding: 0px;
}

h1 {
  font-family: "Metamorphous", cursive;
  color: black;
  text-decoration: none;
  font-size: 40px;
  text-align: left;
}

.portfolio-container {
  display: flex;
  flex-wrap: wrap;
  margin-top: 0px;
  justify-self: center;
}

.box {
  border: #eccdb4;
  width: 200px;
  height: 117px;
  margin: 10px;
  padding: 20px;
}

.box2 {
  border: #eccdb4;
  background-color: #eccdb4;
  width: 200px;
  height: 117px;
  margin: 10px;
  padding: 20px;
}

.current {
  font-weight: bold;
}

a:hover {
  background-color: #eccdb4;
  color: #fea1a1;
}

a:active {
  color: #fea1a1;
}

.fromLeft {
  float: right;
}

#aboutme {
  font-family: "Montserrat", sans-serif;
  color: black;
  text-align: left;
  font-size: 30px;
  padding: 20px;
  line-height: 2em;
  text-transform: none;
  margin-left: -50px;
  margin-top: -60px;
}

#details {
  font-family: "Montserrat", sans-serif;
  color: black;
  text-align: left;
  font-size: 20px;
  padding: 20px;
  line-height: 2em;
  text-transform: none;
  margin-left: -50px;
}

#title {
  font-family: "Montserrat", sans-serif;
  color: black;
  text-align: left;
  font-size: 20px;
  padding: 20px;
  line-height: 2em;
  text-transform: none;
  margin-left: 0px;
}

@media screen and (max-width: 1400px) {
  main {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (max-width: 960px) {
  main {
    grid-template-columns: 100%;
    grid-template-rows: 400px 500px;
  }

  .panel.welcome footer {
    height: 30px;
  }

  .panel.welcome footer img {
    max-width: 30px;
    max-height: 30px;
  }

  .panel img {
    width: 100%;
    height: 100vh;
  }

  .fromLeft {
    float: center;
  }

  #aboutme {
    margin-left: 5px;
    line-height: 1.5em;
  }

  #details {
    margin-left: 5px;
    line-height: 1em;
  }

  .portfolio-container {
    width: 100%;
    margin-top: 0;
  }
}

